src/com/github/mccxj/go/sgf/parser/SGF.java
/* Generated By:JavaCC: Do not edit this line. SGF.java */
package com.github.mccxj.go.sgf.parser;
import java.util.*;
import com.github.mccxj.go.sgf.*;
public class SGF implements SGFConstants {

  final public List<SGFGameTree> Collection() throws ParseException {
  SGFGameTree gameTree = null;
  List<SGFGameTree> gameTrees = new ArrayList<SGFGameTree>();
    label_1:
    while (true) {
      gameTree = GameTree();
      gameTrees.add(gameTree);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPEN:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
    {if (true) return gameTrees;}
    throw new Error("Missing return statement in function");
  }

  final public SGFGameTree GameTree() throws ParseException {
  SGFSequence sequence = null;
  SGFGameTree child = null;
  SGFGameTree gameTree = new SGFGameTree();
    jj_consume_token(OPEN);
    sequence = Sequence();
    gameTree.setSequence(sequence);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPEN:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      child = GameTree();
      gameTree.addGameTree(child);
    }
    jj_consume_token(CLOSE);
    {if (true) return gameTree;}
    throw new Error("Missing return statement in function");
  }

  final public SGFSequence Sequence() throws ParseException {
  SGFNode node = null;
  SGFSequence sequence = new SGFSequence();
    label_3:
    while (true) {
      node = Node();
      sequence.addNode(node);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMI:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
    }
    {if (true) return sequence;}
    throw new Error("Missing return statement in function");
  }

  final public SGFNode Node() throws ParseException {
  SGFProperty property = null;
  SGFNode node = new SGFNode();
    jj_consume_token(SEMI);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NAME:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_4;
      }
      property = Property();
      node.addProperty(property);
    }
    {if (true) return node;}
    throw new Error("Missing return statement in function");
  }

  final public SGFProperty Property() throws ParseException {
  Token name = null;
  Token value = null;
  SGFProperty property = new SGFProperty();
    name = jj_consume_token(NAME);
    property.setIdentifier(name.image);
    label_5:
    while (true) {
      value = jj_consume_token(VALUE);
      property.addValue(value.image);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VALUE:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_5;
      }
    }
    {if (true) return property;}
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public SGFTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[5];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x40,0x40,0x20,0x100,0x200,};
   }

  /** Constructor with InputStream. */
  public SGF(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public SGF(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new SGFTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public SGF(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new SGFTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public SGF(SGFTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(SGFTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[10];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 5; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 10; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
